{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "03cdf6f0-4ae2-442a-a630-2224d722c111",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "283cf55f-a682-4943-b566-4a0d6ce2c782",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "1176e3aa-ef19-4a91-8125-c9984fc8f69a",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d6bf1942-5430-4bd5-aabd-c5d5d0f2abd7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "615e579a-c6dc-46c2-8f4f-89f9190d72b6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fb4ad366-ff25-4cbf-8781-d2e51e5a3816",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ae16a15a-fc2a-42e2-9aa8-8812f89df303",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "01283e6c-8142-4d54-bfa5-3af69643d5ca",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "4b227b90-1d1b-411f-aa60-a20e565ee939",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}